--- a/portfolioReact/src/data/projects.json
+++ b/portfolioReact/src/data/projects.json
@@ -18,11 +18,11 @@
     },
 
     {
-        "title": "Pokedex",
-        "imgSrc": "projects/pokedex.png",
-        "description": "Proyecto de Pokedex interactiva ",
-        "skills": ["react", "API", "typescript"],
+        "title": "Hotel Paraiso",
+        "imgSrc": "projects/hotelParaiso.png",
+        "description": "Sitio de un hotel ubicado en Nassau. ",
+        "skills": ["react", "css", "typescript"],
         "link": "https://poke-react-mu.vercel.app/",
-        "repositorio": "https://github.com/Martin-Cifre/PokedexReact"
+        "repositorio": "https://github.com/Martin-Cifre/HotelReact"
     }
 ]
